# fortran_acc_tutorial

./: CMakeLists.txt
src/: mo_constants.f90  the_class.f90  the_program.f90
